# Blocks

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  tarpaulin-report.html
.github/workflows/: ci-cs.yml  ci-math.yml  ci-ml.yml  ci-shared.yml  ci-stats.yml  ci.yml  release.yml
benches/cs/sort/: common.rs  heapsort_benchmarks.rs  quicksort_benchmarks.rs  sorting_benchmarks.rs  std_sort_benchmarks.rs
benches/cs/string/: suffix_array.rs
crates/cs/blocks-cs-comp/: Cargo.toml
crates/cs/blocks-cs-core/: Cargo.toml
crates/cs/blocks-cs-dist/: Cargo.toml
crates/cs/blocks-cs-dp/: Cargo.toml
crates/cs/blocks-cs-ecc/: Cargo.toml
crates/cs/blocks-cs-graph/: Cargo.toml
crates/cs/blocks-cs-graph/src/: algorithms.rs  error.rs  graph.rs  lib.rs
crates/cs/blocks-cs-graph/src/algorithms/: bellman_ford.rs  dijkstra.rs  floyd_warshall.rs  johnson.rs
crates/cs/blocks-cs-hash/: Cargo.toml
crates/cs/blocks-cs-hpc/: Cargo.toml
crates/cs/blocks-cs-mem/: Cargo.toml
crates/cs/blocks-cs-quantum/: Cargo.toml
crates/cs/blocks-cs-sched/: Cargo.toml
crates/cs/blocks-cs-search/: Cargo.toml  README.md
crates/cs/blocks-cs-search/benches/: binary_search_benchmarks.rs  search_benchmark.rs
crates/cs/blocks-cs-search/src/: algorithms.rs  binary_search.rs  error.rs  lib.rs  linear.rs
crates/cs/blocks-cs-search/src/algorithms/: binary.rs  exponential.rs  interpolation.rs  jump.rs  linear.rs  sublist.rs  ternary.rs
crates/cs/blocks-cs-sec/: Cargo.toml
crates/cs/blocks-cs-sort/: CHANGELOG.md  Cargo.toml  README.md
crates/cs/blocks-cs-sort/benches/: heapsort_benchmarks.rs  mergesort_benchmarks.rs  quicksort_benchmarks.rs  sorting_benchmarks.rs  std_sort_benchmarks.rs
crates/cs/blocks-cs-sort/src/: algorithms.rs  error.rs  lib.rs  memory.rs
crates/cs/blocks-cs-sort/src/algorithms/: bubblesort.rs  bucketsort.rs  countingsort.rs  heapsort.rs  insertionsort.rs  mergesort.rs  mergesort.rs.old  mod.rs  quicksort.rs  radixsort.rs  selectionsort.rs  shellsort.rs
crates/cs/blocks-cs-stream/: Cargo.toml
crates/cs/blocks-cs-string/: Cargo.toml  DEBUG.md  README.md
crates/cs/blocks-cs-string/benches/: suffix_array.rs
crates/cs/blocks-cs-string/src/: algorithms.rs  error.rs  lib.rs
crates/cs/blocks-cs-string/src/algorithms/: aho_corasick.rs  boyer_moore.rs  kmp.rs  manacher.rs  rabin_karp.rs  rolling_hash.rs  suffix_automaton.rs  suffix_tree.rs  z_algorithm.rs
crates/cs/blocks-cs-tree/: Cargo.toml
crates/cs/blocks-cs-txn/: Cargo.toml
crates/math/blocks-math-combo/: Cargo.toml
crates/math/blocks-math-core/: Cargo.toml
crates/math/blocks-math-geometry/: Cargo.toml
crates/math/blocks-math-ilp/: Cargo.toml
crates/math/blocks-math-num/: Cargo.toml
crates/math/blocks-math-optim/: Cargo.toml
crates/math/blocks-math-sat/: Cargo.toml
crates/ml/blocks-ml-class/: Cargo.toml
crates/ml/blocks-ml-class/src/: algorithms.rs  lib.rs
crates/ml/blocks-ml-class/src/algorithms/: decision_tree.rs  decision_tree_test.rs  kmeans.rs  kmeans_test.rs  knn.rs  knn_test.rs  logistic_regression.rs  logistic_regression_test.rs  random_forest.rs  random_forest_test.rs
crates/ml/blocks-ml-classic/: Cargo.toml  README.md
crates/ml/blocks-ml-classic/benches/: clustering_benchmarks.rs  regression_benchmarks.rs
crates/ml/blocks-ml-classic/src/: algorithms.rs  error.rs  lib.rs  traits.rs  utils.rs
crates/ml/blocks-ml-classic/src/algorithms/clustering/: kmeans.rs  knn.rs
crates/ml/blocks-ml-classic/src/algorithms/regression/: linear.rs  logistic.rs  mod.rs
crates/ml/blocks-ml-core/: Cargo.toml
crates/ml/blocks-ml-cv/: Cargo.toml
crates/ml/blocks-ml-deep/: Cargo.toml
crates/ml/blocks-ml-game-search/: Cargo.toml
crates/ml/blocks-ml-nlp/: Cargo.toml
crates/ml/blocks-ml-nlp/benches/: cyk_benchmarks.rs
crates/ml/blocks-ml-nlp/src/: algorithms.rs  error.rs  lib.rs  utils.rs
crates/ml/blocks-ml-nlp/src/algorithms/: cyk.rs
crates/ml/blocks-ml-rl/: Cargo.toml
crates/shared/blocks-core/: Cargo.toml
crates/shared/blocks-primitives/: Cargo.toml
crates/shared/blocks-tests/: Cargo.toml
crates/shared/blocks-utils/: Cargo.toml
crates/stats/blocks-stats-approx/: Cargo.toml
crates/stats/blocks-stats-bayesian/: Cargo.toml
crates/stats/blocks-stats-core/: Cargo.toml
crates/stats/blocks-stats-prob/: Cargo.toml
crates/stats/blocks-stats-rand/: Cargo.toml
crates/stats/blocks-stats-signal/: Cargo.toml
docs/: README.md  REQUIREMENTS.md
docs/architecture/: ADR-0001-WORKSPACE-ORGANIZATION.md
docs/development/: CODE-REVIEW.md
docs/infrastructure/: SECURITY.md
docs/specifications/: ALGORITHM-CATEGORIES.md  ALGORITHM-ORGANIZATION.md
notes/: SUMMARY.md
notes/architecture/: ADR-0002-VERIFICATION-STRATEGY.md  ADR_TEMPLATE.md
notes/development/: CONTRIBUTING.md  WORKFLOW.md
notes/infrastructure/: CI_CD.md  SECURITY.md  TOOLING.md  VERIFICATION.md
notes/specifications/: ALGORITHM-ORGANIZATION.md  REQUIREMENTS.md
notes/versioning/: API_STABILITY.md  FEATURE_FLAGS.md
src/: cs.rs  error.rs  lib.rs
src/algorithms/: algorithms.rs  mod.rs
src/cs/: error.rs  search.rs  sort.rs  string.rs
src/cs/search/: bfs.rs  binary.rs  dfs.rs  exponential.rs  fibonacci.rs  interpolation.rs  jump.rs  linear.rs  sublist.rs  ternary.rs
src/cs/sort/: bubblesort.rs  bucketsort.rs  countingsort.rs  heapsort.rs  insertionsort.rs  mergesort.rs  quicksort.rs  radixsort.rs  selectionsort.rs  shellsort.rs
src/cs/string/: aho_corasick.rs  boyer_moore.rs  kmp.rs  manacher.rs  rabin_karp.rs  rolling_hash.rs  suffix_array.rs  suffix_automaton.rs  suffix_tree.rs  z_algorithm.rs
