[workspace]
resolver = "2"
members = [
    "crates/shared/blocks-core",
    "crates/shared/blocks-utils",
    "crates/shared/blocks-tests",
    # Computer Science
    "crates/cs/blocks-cs-core",
    "crates/cs/blocks-cs-sort",
    "crates/cs/blocks-cs-search",
    "crates/cs/blocks-cs-string",
    "crates/cs/blocks-cs-tree",
    "crates/cs/blocks-cs-dp",
    "crates/cs/blocks-cs-dist",
    "crates/cs/blocks-cs-mem",
    "crates/cs/blocks-cs-txn",
    "crates/cs/blocks-cs-sched",
    "crates/cs/blocks-cs-hpc",
    "crates/cs/blocks-cs-hash",
    "crates/cs/blocks-cs-sec",
    "crates/cs/blocks-cs-comp",
    "crates/cs/blocks-cs-ecc",
    "crates/cs/blocks-cs-stream",
    "crates/cs/blocks-cs-quantum",
    "crates/cs/blocks-cs-graph",
    # Mathematics
    "crates/math/blocks-math-core",
    "crates/math/blocks-math-num",
    "crates/math/blocks-math-geometry",
    "crates/math/blocks-math-combo",
    "crates/math/blocks-math-optim",
    "crates/math/blocks-math-ilp",
    "crates/math/blocks-math-sat",
    # Statistics
    "crates/stats/blocks-stats-core",
    "crates/stats/blocks-stats-bayesian",
    "crates/stats/blocks-stats-rand",
    "crates/stats/blocks-stats-signal",
    "crates/stats/blocks-stats-prob",
    "crates/stats/blocks-stats-approx",
    # Machine Learning
    "crates/ml/blocks-ml-core",
    "crates/ml/blocks-ml-classic",
    "crates/ml/blocks-ml-deep",
    "crates/ml/blocks-ml-rl",
    "crates/ml/blocks-ml-cv",
    "crates/ml/blocks-ml-nlp",
    "crates/ml/blocks-ml-game-search"
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Brad Edwards <brad@keplerops.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atomiklabs/blocks"

[workspace.dependencies]
ndarray = "0.15"
thiserror = "1.0"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
criterion = "0.5"
approx = "0.5"
proptest = "1.4"
rand_chacha = "0.3"
