[package]
name = "Blocks"
version = "0.1.0"
edition = "2021"
authors = ["Brad Edwards"]
description = "A collection of algorithms and data structures"
license = "MIT"
repository = "https://github.com/KeplerOps/Blocks"
readme = "README.md"
keywords = ["algorithms", "data-structures", "computer-science"]
categories = ["algorithms", "data-structures"]

[dependencies]
thiserror = "1.0.57"
num-traits = "0.2.17"
rayon = "1.8.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "suffix_array"
path = "benches/cs/string/suffix_array.rs"
harness = false

[[bench]]
name = "heapsort"
path = "benches/cs/sort/heapsort_benchmarks.rs"
harness = false

[[bench]]
name = "quicksort"
path = "benches/cs/sort/quicksort_benchmarks.rs"
harness = false

[[bench]]
name = "sorting"
path = "benches/cs/sort/sorting_benchmarks.rs"
harness = false

[[bench]]
name = "std_sort"
path = "benches/cs/sort/std_sort_benchmarks.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 0
debug = true

[features]
parallel = []
simd = []
