[package]
name = "blocks-cs-string"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "String algorithms implementation for the Blocks project"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"
rand = "0.8"

[features]
default = []
