[package]
name = "blocks-ml-nlp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Natural Language Processing algorithms for the Blocks project"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "cyk_benchmarks"
harness = false
